add config.js (empty for the moment) and little change in readme and index

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 	<main>
 
+		<!-- settings Button -->
 		<div class="settingsBtn">
 			<button class="learn-more">
 				<span class="circle" aria-hidden="true">
@@ -25,8 +26,10 @@
 			</button>
 		</div>
 
+		<!-- backgground image -->
 		<img class="background" src="src/img/lake.jpg" alt="lake" />
-
+		
+		
 	</main>
 
 </body>
