--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 
 <head>
+	<base href="/">
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>StarLake:Reloaded</title>
 	<link rel="stylesheet" href="src/css/style.css">
+	<link rel="stylesheet" href="node_modules/material-icons/iconfont/material-icons.css">
+
+	<script src="config.js"></script>
 </head>
 
 <body class="dark">
@@ -16,8 +20,8 @@
 		<div class="settingsBtn">
 			<button class="learn-more">
 				<span class="circle" aria-hidden="true">
-					<svg class="icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-						fill="#e3e3e3">
+					<svg class="icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
+						width="24px" fill="#e3e3e3">
 						<path
 							d="M433-80q-27 0-46.5-18T363-142l-9-66q-13-5-24.5-12T307-235l-62 26q-25 11-50 2t-39-32l-47-82q-14-23-8-49t27-43l53-40q-1-7-1-13.5v-27q0-6.5 1-13.5l-53-40q-21-17-27-43t8-49l47-82q14-23 39-32t50 2l62 26q11-8 23-15t24-12l9-66q4-26 23.5-44t46.5-18h94q27 0 46.5 18t23.5 44l9 66q13 5 24.5 12t22.5 15l62-26q25-11 50-2t39 32l47 82q14 23 8 49t-27 43l-53 40q1 7 1 13.5v27q0 6.5-2 13.5l53 40q21 17 27 43t-8 49l-48 82q-14 23-39 32t-50-2l-60-26q-11 8-23 15t-24 12l-9 66q-4 26-23.5 44T527-80h-94Zm49-260q58 0 99-41t41-99q0-58-41-99t-99-41q-59 0-99.5 41T342-480q0 58 40.5 99t99.5 41Z" />
 					</svg>
@@ -26,10 +30,36 @@
 			</button>
 		</div>
 
+		<!-- topright -->
+		<div class="googleService">
+			<button class="googleService__btn active">
+				<img id="googleServiceImage" src="avatar.png" alt="">
+			</button>
+			<div class="googleService__card">
+				<div class="title">
+					<p id="googleServiceTitle"></p>
+					<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+						fill="#e3e3e3">
+						<path
+							d="M480-424 284-228q-11 11-28 11t-28-11q-11-11-11-28t11-28l196-196-196-196q-11-11-11-28t11-28q11-11 28-11t28 11l196 196 196-196q11-11 28-11t28 11q11 11 11 28t-11 28L536-480l196 196q11 11 11 28t-11 28q-11 11-28 11t-28-11L480-424Z" />
+					</svg>
+				</div>
+				<hr>
+				<div id="serviceLinkAreas">
+					
+				</div>
+			</div>
+		</div>
+
 		<!-- backgground image -->
 		<img class="background" src="src/img/lake.jpg" alt="lake" />
-		
-		
+
+		<div class="ccenter">
+			<div class="clock">
+
+			</div>
+		</div>
+
 	</main>
 
 </body>
