--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" href="src/css/style.css">
 	<link rel="stylesheet" href="node_modules/material-icons/iconfont/material-icons.css">
 
+	<script src="node_modules/hyperscript.org/dist/_hyperscript.min.js"></script>
+
 	<script src="config.js"></script>
 </head>
 
@@ -32,13 +34,13 @@
 
 		<!-- topright -->
 		<div class="googleService">
-			<button class="googleService__btn active">
+			<button _="on click add .active to .googleService__card then remove .hide from .googleService__card then add .hide to me" class="googleService__btn active">
 				<img id="googleServiceImage" src="avatar.png" alt="">
 			</button>
 			<div class="googleService__card">
 				<div class="title">
 					<p id="googleServiceTitle"></p>
-					<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+					<svg _="on click remove .active from .googleService__card then add .hide to .googleService__card then remove .hide from .googleService__btn" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
 						fill="#e3e3e3">
 						<path
 							d="M480-424 284-228q-11 11-28 11t-28-11q-11-11-11-28t11-28l196-196-196-196q-11-11-11-28t11-28q11-11 28-11t28 11l196 196 196-196q11-11 28-11t28 11q11 11 11 28t-11 28L536-480l196 196q11 11 11 28t-11 28q-11 11-28 11t-28-11L480-424Z" />
